Uploaded my findings

--- a/Viz Analysis and Folium/lab_jupyter_launch_site_location.ipynb
+++ b/Viz Analysis and Folium/lab_jupyter_launch_site_location.ipynb
@@ -873,6 +873,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ul>\n",
+       "<li style='list-style-type:circle'>All the Launch Sites are close to the equator</li>\n",
+       "<li style='list-style-type:circle'>They are all also close to the coast</li>\n",
+       "</ul>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<ul>\n",
+    "<li style='list-style-type:circle'>All the Launch Sites are close to the equator</li>\n",
+    "<li style='list-style-type:circle'>They are all also close to the coast</li>\n",
+    "</ul>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
