--- a/EDA/EDA-sql-coursera_sqllite.ipynb
+++ b/EDA/EDA-sql-coursera_sqllite.ipynb
@@ -1395,6 +1395,7 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -1608,9 +1609,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1622,7 +1623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
