--- a/spacex-data-collection-api.ipynb
+++ b/spacex-data-collection-api.ipynb
@@ -328,7 +328,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "To make the requested JSON results more consistent, we will use the following static response object for this project:\n"
    ]
