--- a/webscraping.ipynb
+++ b/webscraping.ipynb
@@ -109,17 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip3 install beautifulsoup4\n",
-    "!pip3 install requests"
+    "# !pip3 install beautifulsoup4\n",
+    "# !pip3 install requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "200"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "<title>List of Falcon 9 and Falcon Heavy launches - Wikipedia</title>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,25 +328,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "25"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use the find_all function in the BeautifulSoup object, with element type `table`\n",
     "# Assign the result to a list called `html_tables`\n",
-    "html_tables=soup.find_all('table')\n",
-    "len(html_tables)"
+    "html_tables=soup.find_all('table')"
    ]
   },
   {
@@ -358,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +558,7 @@
        "</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,24 +618,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "column_names = [extract_column_from_header(name) for name in first_launch_table.find_all('th') if len(name.get_text(strip=True)) >1 \\\n",
-    "               and name.get_text(strip=True) is not None]\n",
-    "# for a in first_launch_table.find_all('th'):\n",
-    "#     if len(a.get_text())>2:\n",
-    "#         print(extract_column_from_header(a))\n",
-    "#     name.get_text(strip=True)\n",
-    "#     if name.text != None and len(name.text)>1 :\n",
-    "# #         print(a)\n",
-    "#         print(extract_column_from_header(name))\n",
-    "#         column_names.append(extract_column_from_header(a))\n",
-    "# row=.find_all('tr')\n",
-    "# for index,a in enumerate(row):\n",
-    "#     print(a)\n",
-    "\n",
+    "column_names = [extract_column_from_header(name) for name in first_launch_table.find_all('th') if len(name.get_text(strip=True)) >1 and name.get_text(strip=True) is not None]\n",
     "\n",
     "# Apply find_all() function with `th` element on first_launch_table\n",
     "# Iterate each th element and apply the provided extract_column_from_header() to get a column name\n",
@@ -663,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -671,15 +646,17 @@
       "text/plain": [
        "['Flight No.',\n",
        " 'Date and time ( )',\n",
+       " '',\n",
        " 'Launch site',\n",
        " 'Payload',\n",
        " 'Payload mass',\n",
        " 'Orbit',\n",
        " 'Customer',\n",
-       " 'Launch outcome']"
+       " 'Launch outcome',\n",
+       " '']"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +812,7 @@
     "            launch_dict['Flight No.'].append(flight_number)\n",
     "            launch_dict['Launch site'].append (launch_site)\n",
     "            launch_dict['Payload'] .append(payload)\n",
-    "            launch_dict['Payload mass (kg)'].append(payload_mass)\n",
+    "            launch_dict['Payload mass'].append(payload_mass)\n",
     "            launch_dict['Orbit'].append(orbit)\n",
     "            launch_dict['Customer'].append(customer)\n",
     "            launch_dict['Launch outcome'].append(launch_outcome)\n",
@@ -856,17 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Let's initial the launch_dict with each value to be an empty list\n",
-    "# launch_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -891,6 +858,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Flight No.</th>\n",
+       "      <th></th>\n",
        "      <th>Launch site</th>\n",
        "      <th>Payload</th>\n",
        "      <th>Payload mass</th>\n",
@@ -907,6 +875,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
+       "      <td>None</td>\n",
        "      <td>CCAFS</td>\n",
        "      <td>Dragon Spacecraft Qualification Unit</td>\n",
        "      <td>0</td>\n",
@@ -921,6 +890,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
+       "      <td>None</td>\n",
        "      <td>CCAFS</td>\n",
        "      <td>Dragon</td>\n",
        "      <td>0</td>\n",
@@ -935,6 +905,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
+       "      <td>None</td>\n",
        "      <td>CCAFS</td>\n",
        "      <td>Dragon</td>\n",
        "      <td>525 kg</td>\n",
@@ -949,6 +920,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
+       "      <td>None</td>\n",
        "      <td>CCAFS</td>\n",
        "      <td>SpaceX CRS-1</td>\n",
        "      <td>4,700 kg</td>\n",
@@ -963,6 +935,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
+       "      <td>None</td>\n",
        "      <td>CCAFS</td>\n",
        "      <td>SpaceX CRS-2</td>\n",
        "      <td>4,877 kg</td>\n",
@@ -979,19 +952,19 @@
        "</div>"
       ],
       "text/plain": [
-       "  Flight No. Launch site                               Payload Payload mass  \\\n",
-       "0          1       CCAFS  Dragon Spacecraft Qualification Unit            0   \n",
-       "1          2       CCAFS                                Dragon            0   \n",
-       "2          3       CCAFS                                Dragon       525 kg   \n",
-       "3          4       CCAFS                          SpaceX CRS-1     4,700 kg   \n",
-       "4          5       CCAFS                          SpaceX CRS-2     4,877 kg   \n",
+       "  Flight No.       Launch site                               Payload  \\\n",
+       "0          1  None       CCAFS  Dragon Spacecraft Qualification Unit   \n",
+       "1          2  None       CCAFS                                Dragon   \n",
+       "2          3  None       CCAFS                                Dragon   \n",
+       "3          4  None       CCAFS                          SpaceX CRS-1   \n",
+       "4          5  None       CCAFS                          SpaceX CRS-2   \n",
        "\n",
-       "  Orbit Customer Launch outcome Version Booster Booster landing  \\\n",
-       "0   LEO   SpaceX        Success  F9 v1.0B0003.1         Failure   \n",
-       "1   LEO     NASA        Success  F9 v1.0B0004.1         Failure   \n",
-       "2   LEO     NASA        Success  F9 v1.0B0005.1      No attempt   \n",
-       "3   LEO     NASA        Success  F9 v1.0B0006.1      No attempt   \n",
-       "4   LEO     NASA        Success  F9 v1.0B0007.1      No attempt   \n",
+       "  Payload mass Orbit Customer Launch outcome Version Booster Booster landing  \\\n",
+       "0            0   LEO   SpaceX        Success  F9 v1.0B0003.1         Failure   \n",
+       "1            0   LEO     NASA        Success  F9 v1.0B0004.1         Failure   \n",
+       "2       525 kg   LEO     NASA        Success  F9 v1.0B0005.1      No attempt   \n",
+       "3     4,700 kg   LEO     NASA        Success  F9 v1.0B0006.1      No attempt   \n",
+       "4     4,877 kg   LEO     NASA        Success  F9 v1.0B0007.1      No attempt   \n",
        "\n",
        "              Date   Time  \n",
        "0      4 June 2010  18:45  \n",
@@ -1001,7 +974,7 @@
        "4     1 March 2013  15:10  "
       ]
      },
-     "execution_count": 375,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,28 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Explain this\\n 8 dksf@'"
-      ]
-     },
-     "execution_count": 398,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mass_ = unicodedata.normalize(\"NFC\", 'Explain this\\n 8 dksf@').strip()\n",
-    "mass_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1042,23 +994,24 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 155 entries, 0 to 154\n",
-      "Data columns (total 11 columns):\n",
+      "RangeIndex: 121 entries, 0 to 120\n",
+      "Data columns (total 12 columns):\n",
       " #   Column           Non-Null Count  Dtype \n",
       "---  ------           --------------  ----- \n",
-      " 0   Flight No.       155 non-null    object\n",
-      " 1   Launch site      155 non-null    object\n",
-      " 2   Payload          155 non-null    object\n",
-      " 3   Payload mass     155 non-null    object\n",
-      " 4   Orbit            155 non-null    object\n",
-      " 5   Customer         154 non-null    object\n",
-      " 6   Launch outcome   155 non-null    object\n",
-      " 7   Version Booster  155 non-null    object\n",
-      " 8   Booster landing  155 non-null    object\n",
-      " 9   Date             155 non-null    object\n",
-      " 10  Time             155 non-null    object\n",
-      "dtypes: object(11)\n",
-      "memory usage: 13.4+ KB\n"
+      " 0   Flight No.       121 non-null    object\n",
+      " 1                    0 non-null      object\n",
+      " 2   Launch site      121 non-null    object\n",
+      " 3   Payload          121 non-null    object\n",
+      " 4   Payload mass     121 non-null    object\n",
+      " 5   Orbit            121 non-null    object\n",
+      " 6   Customer         120 non-null    object\n",
+      " 7   Launch outcome   121 non-null    object\n",
+      " 8   Version Booster  121 non-null    object\n",
+      " 9   Booster landing  121 non-null    object\n",
+      " 10  Date             121 non-null    object\n",
+      " 11  Time             121 non-null    object\n",
+      "dtypes: object(12)\n",
+      "memory usage: 11.5+ KB\n"
      ]
     }
    ],
@@ -1068,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1093,6 +1046,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Flight No.</th>\n",
+       "      <th></th>\n",
        "      <th>Launch site</th>\n",
        "      <th>Payload</th>\n",
        "      <th>Payload mass</th>\n",
@@ -1107,8 +1061,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>51</th>\n",
+       "      <th>17</th>\n",
        "      <td>18</td>\n",
+       "      <td>None</td>\n",
        "      <td>Cape Canaveral</td>\n",
        "      <td>TürkmenÄlem 52°E / MonacoSAT</td>\n",
        "      <td>4,707 kg</td>\n",
@@ -1125,17 +1080,17 @@
        "</div>"
       ],
       "text/plain": [
-       "   Flight No.     Launch site                       Payload Payload mass  \\\n",
-       "51         18  Cape Canaveral  TürkmenÄlem 52°E / MonacoSAT     4,707 kg   \n",
+       "   Flight No.           Launch site                       Payload  \\\n",
+       "17         18  None  Cape Canaveral  TürkmenÄlem 52°E / MonacoSAT   \n",
        "\n",
-       "   Orbit Customer Launch outcome Version Booster Booster landing  \\\n",
-       "51   GTO     None        Success         F9 v1.1      No attempt   \n",
+       "   Payload mass Orbit Customer Launch outcome Version Booster Booster landing  \\\n",
+       "17     4,707 kg   GTO     None        Success         F9 v1.1      No attempt   \n",
        "\n",
        "             Date   Time  \n",
-       "51  27 April 2015  23:03  "
+       "17  27 April 2015  23:03  "
       ]
      },
-     "execution_count": 413,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,11 +1101,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.to_csv('Coursera/Sql/spacex_web_scraped.csv', index=False)"
+    "df.to_csv('spacex_web_scraped.csv', index=False)"
    ]
   },
   {
